--- a/test/sass/basic-explicit.scss
+++ b/test/sass/basic-explicit.scss
@@ -8,11 +8,11 @@ div {
   $color: get-color() !global;
   $list: 1px solid black !global;
   $listComma: tahoma, arial !global;
-  $string: 'string' !global;
+  $string: "string" !global;
   $boolean: true !global;
   $null: null !global;
-$map: (
-  number: 2em,
-  string: 'mapstring'
-) !global;
+  $map: (
+    number: 2em,
+    string: "mapstring",
+  ) !global;
 }
