--- a/test/sass/foundation.scss
+++ b/test/sass/foundation.scss
@@ -8,72 +8,69 @@ $base-font-size: 20px;
  */
 
 // Dependencies
-@import '../../node_modules/foundation-sites/_vendor/normalize-scss/sass/normalize';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/helpers/true';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/contain';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/purge';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/remove';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/replace';
-@import '../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/to-list';
+@import "../../node_modules/foundation-sites/_vendor/normalize-scss/sass/normalize";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/helpers/missing-dependencies";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/helpers/true";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/contain";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/purge";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/remove";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/replace";
+@import "../../node_modules/foundation-sites/_vendor/sassy-lists/stylesheets/functions/to-list";
 
 // Settings
 // import your own `settings` here or
 // import and modify the default settings through
 // @import '../../node_modules/foundation-sites/scss/settings/settings';
-@import './foundation-settings';
+@import "./foundation-settings";
 
 // Sass utilities
-@import '../../node_modules/foundation-sites/scss/util/util';
+@import "../../node_modules/foundation-sites/scss/util/util";
 
 // Global variables and styles
-@import '../../node_modules/foundation-sites/scss/global';
+@import "../../node_modules/foundation-sites/scss/global";
 
 // Components
-@import '../../node_modules/foundation-sites/scss/grid/grid';
-@import '../../node_modules/foundation-sites/scss/xy-grid/xy-grid';
-@import '../../node_modules/foundation-sites/scss/typography/typography';
-@import '../../node_modules/foundation-sites/scss/forms/forms';
-@import '../../node_modules/foundation-sites/scss/components/visibility';
-@import '../../node_modules/foundation-sites/scss/components/float';
-@import '../../node_modules/foundation-sites/scss/components/button';
-@import '../../node_modules/foundation-sites/scss/components/button-group';
-@import '../../node_modules/foundation-sites/scss/components/accordion-menu';
-@import '../../node_modules/foundation-sites/scss/components/accordion';
-@import '../../node_modules/foundation-sites/scss/components/badge';
-@import '../../node_modules/foundation-sites/scss/components/breadcrumbs';
-@import '../../node_modules/foundation-sites/scss/components/callout';
-@import '../../node_modules/foundation-sites/scss/components/card';
-@import '../../node_modules/foundation-sites/scss/components/close-button';
-@import '../../node_modules/foundation-sites/scss/components/drilldown';
-@import '../../node_modules/foundation-sites/scss/components/dropdown-menu';
-@import '../../node_modules/foundation-sites/scss/components/dropdown';
-@import '../../node_modules/foundation-sites/scss/components/flex';
-@import '../../node_modules/foundation-sites/scss/components/responsive-embed';
-@import '../../node_modules/foundation-sites/scss/components/label';
-@import '../../node_modules/foundation-sites/scss/components/media-object';
-@import '../../node_modules/foundation-sites/scss/components/menu';
-@import '../../node_modules/foundation-sites/scss/components/menu-icon';
-@import '../../node_modules/foundation-sites/scss/components/off-canvas';
-@import '../../node_modules/foundation-sites/scss/components/orbit';
-@import '../../node_modules/foundation-sites/scss/components/pagination';
-@import '../../node_modules/foundation-sites/scss/components/progress-bar';
-@import '../../node_modules/foundation-sites/scss/components/reveal';
-@import '../../node_modules/foundation-sites/scss/components/slider';
-@import '../../node_modules/foundation-sites/scss/components/sticky';
-@import '../../node_modules/foundation-sites/scss/components/switch';
-@import '../../node_modules/foundation-sites/scss/components/table';
-@import '../../node_modules/foundation-sites/scss/components/tabs';
-@import '../../node_modules/foundation-sites/scss/components/title-bar';
-@import '../../node_modules/foundation-sites/scss/components/top-bar';
-@import '../../node_modules/foundation-sites/scss/components/thumbnail';
-@import '../../node_modules/foundation-sites/scss/components/tooltip';
-@import '../../node_modules/foundation-sites/scss/prototype/prototype';
+@import "../../node_modules/foundation-sites/scss/grid/grid";
+@import "../../node_modules/foundation-sites/scss/xy-grid/xy-grid";
+@import "../../node_modules/foundation-sites/scss/typography/typography";
+@import "../../node_modules/foundation-sites/scss/forms/forms";
+@import "../../node_modules/foundation-sites/scss/components/visibility";
+@import "../../node_modules/foundation-sites/scss/components/float";
+@import "../../node_modules/foundation-sites/scss/components/button";
+@import "../../node_modules/foundation-sites/scss/components/button-group";
+@import "../../node_modules/foundation-sites/scss/components/accordion-menu";
+@import "../../node_modules/foundation-sites/scss/components/accordion";
+@import "../../node_modules/foundation-sites/scss/components/badge";
+@import "../../node_modules/foundation-sites/scss/components/breadcrumbs";
+@import "../../node_modules/foundation-sites/scss/components/callout";
+@import "../../node_modules/foundation-sites/scss/components/card";
+@import "../../node_modules/foundation-sites/scss/components/close-button";
+@import "../../node_modules/foundation-sites/scss/components/drilldown";
+@import "../../node_modules/foundation-sites/scss/components/dropdown-menu";
+@import "../../node_modules/foundation-sites/scss/components/dropdown";
+@import "../../node_modules/foundation-sites/scss/components/flex";
+@import "../../node_modules/foundation-sites/scss/components/responsive-embed";
+@import "../../node_modules/foundation-sites/scss/components/label";
+@import "../../node_modules/foundation-sites/scss/components/media-object";
+@import "../../node_modules/foundation-sites/scss/components/menu";
+@import "../../node_modules/foundation-sites/scss/components/menu-icon";
+@import "../../node_modules/foundation-sites/scss/components/off-canvas";
+@import "../../node_modules/foundation-sites/scss/components/orbit";
+@import "../../node_modules/foundation-sites/scss/components/pagination";
+@import "../../node_modules/foundation-sites/scss/components/progress-bar";
+@import "../../node_modules/foundation-sites/scss/components/reveal";
+@import "../../node_modules/foundation-sites/scss/components/slider";
+@import "../../node_modules/foundation-sites/scss/components/sticky";
+@import "../../node_modules/foundation-sites/scss/components/switch";
+@import "../../node_modules/foundation-sites/scss/components/table";
+@import "../../node_modules/foundation-sites/scss/components/tabs";
+@import "../../node_modules/foundation-sites/scss/components/title-bar";
+@import "../../node_modules/foundation-sites/scss/components/top-bar";
+@import "../../node_modules/foundation-sites/scss/components/thumbnail";
+@import "../../node_modules/foundation-sites/scss/components/tooltip";
+@import "../../node_modules/foundation-sites/scss/prototype/prototype";
 
-@mixin foundation-everything(
-  $flex: true,
-  $prototype: false
-) {
+@mixin foundation-everything($flex: true, $prototype: false) {
   @if $flex {
     $global-flexbox: true !global;
   }
@@ -81,12 +78,10 @@ $base-font-size: 20px;
   @include foundation-global-styles;
   @if not $flex {
     @include foundation-grid;
-  }
-  @else {
+  } @else {
     @if $xy-grid {
       @include foundation-xy-grid-classes;
-    }
-    @else {
+    } @else {
       @include foundation-flex-grid;
     }
   }
