--- a/test/sass/ie-hacks.scss
+++ b/test/sass/ie-hacks.scss
@@ -1,8 +1,8 @@
 div {
   &:focus {
-     outline: 0;
-     outline: thin dotted \9; /* IE6-9 */
+    outline: 0;
+    outline: thin dotted \9; /* IE6-9 */
   }
 }
 
-$my: 'variable';
+$my: "variable";
