--- a/test/sass/in-fn-blocks.scss
+++ b/test/sass/in-fn-blocks.scss
@@ -1,11 +1,11 @@
-$someDefault: 'default-val';
+$someDefault: "default-val";
 
 @mixin mixin1 {
-  $mixin1: 'm-variable-1' !global;
+  $mixin1: "m-variable-1" !global;
 }
 
 @mixin mixin2($param1, $param2: null, $param3: $someDefault, $param4: 123) {
-  $mixin2: 'm-variable-2' !global;
+  $mixin2: "m-variable-2" !global;
 }
 
 @mixin mixin3($param1, $param2: null, $param3: $someDefault, $param4: 123) {
@@ -13,12 +13,12 @@ $someDefault: 'default-val';
 }
 
 @function func1() {
-  $function1: 'fn-variable-1' !global;
+  $function1: "fn-variable-1" !global;
   @return null;
 }
 
 @function func2($param4, $param5, $param6: 123, $param7: $someDefault) {
-  $function2: 'fn-variable-2' !global;
+  $function2: "fn-variable-2" !global;
   @return null;
 }
 
@@ -27,22 +27,22 @@ $someDefault: 'default-val';
   @return null;
 }
 
-@function func4($param: 'default') {
+@function func4($param: "default") {
   $someGlobalSetOnInvoke1: $param !global;
   @return null;
 }
 
-@function func5($param: 'default') {
+@function func5($param: "default") {
   $someGlobalSetOnInvoke2: $param !global;
   @return null;
 }
 
 @include mixin1;
-@include mixin2('abc');
-@include mixin3('def');
+@include mixin2("abc");
+@include mixin3("def");
 
 $invoked: func1();
-$invoked2: func2('a', 'b');
-$invoked3: func3('a', 'b', 'c', 'provided-val');
+$invoked2: func2("a", "b");
+$invoked3: func3("a", "b", "c", "provided-val");
 $invoked4: func4();
-$invoked5: func5('provided');
+$invoked5: func5("provided");
