--- a/test/sass/include/functions.scss
+++ b/test/sass/include/functions.scss
@@ -1,29 +1,29 @@
 @function func1() {
   @if true {
-    $functionVariable: 'function-variable' !global;
+    $functionVariable: "function-variable" !global;
   }
   @if false {
-    $functionVariable: 'should-not-happen' !global;
+    $functionVariable: "should-not-happen" !global;
   }
   @return bar;
 }
 
 @function func-with-default() {
-  $defaultedAtFirst: 'defaulted' !default !global;
+  $defaultedAtFirst: "defaulted" !default !global;
   @return bar;
 }
 
 @function func-that-overrides() {
-  $defaultedAtFirst: 'actual' !global; 
+  $defaultedAtFirst: "actual" !global;
   @return bar;
 }
 
 @function func-default() {
-  $someDefault: 'a' !default !global;
+  $someDefault: "a" !default !global;
   @return bar;
 }
 @function func-not-default() {
-  $someDefault: 'c' !global;
+  $someDefault: "c" !global;
   @return bar;
 }
 
@@ -37,10 +37,10 @@
 }
 
 @function func-multiple-default-1() {
-  $multipleDefault: 'x' !default !global;
+  $multipleDefault: "x" !default !global;
   @return bar;
 }
 @function func-multiple-default-2() {
-  $multipleDefault: 'y' !default !global;
+  $multipleDefault: "y" !default !global;
   @return bar;
 }
