--- a/test/sass/var-args.scss
+++ b/test/sass/var-args.scss
@@ -15,13 +15,13 @@
 }
 
 $echoedArgs: echo(1, 2, 3);
-$echoedArg: echo('hello');
+$echoedArg: echo("hello");
 
-$optionallySingle: optionally('last');
-$optionallyMultiple: optionally('last', 1, 2, 3);
+$optionallySingle: optionally("last");
+$optionallyMultiple: optionally("last", 1, 2, 3);
 
-$oneString: oneOf(2, 'a', 'b', 'c');
-$oneNumber: oneOf(3, 'a', 'b', 5, ('d', 'e'));
-$oneList: oneOf(4, 'a', 'b', 5, ('d', 'e'), 1, 2);
+$oneString: oneOf(2, "a", "b", "c");
+$oneNumber: oneOf(3, "a", "b", 5, ("d", "e"));
+$oneList: oneOf(4, "a", "b", 5, ("d", "e"), 1, 2);
 
 @include echoMixin(5, 6, 7);
